--- a/app/src/main/res/layout/activity_end.xml
+++ b/app/src/main/res/layout/activity_end.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:maxWidth="600dp"
     tools:context=".EndActivity">
 
     <android.support.v7.widget.Toolbar
@@ -40,6 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_margin="8dp"
+                android:elevation="4dp"
                 android:background="#FFFFFF">
 
                 <TextView
@@ -63,6 +63,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:elevation="4dp"
                 android:background="#FFFFFF">
 
                 <LinearLayout
@@ -125,7 +126,7 @@
                             android:orientation="horizontal">
                             <TextView
                                 android:layout_width="0dp"
-                                android:layout_weight="1"
+                                android:layout_weight="1.8"
                                 android:layout_height="match_parent"
                                 android:text="Pagine programmate"
                                 android:paddingLeft="16dp"
@@ -150,15 +151,16 @@
                             android:layout_height="0dp"
                             android:layout_weight="1.5"
                             android:layout_marginTop="16dp"
-                            android:layout_marginLeft="8dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginRight="8dp"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginEnd="16dp"
+                            android:layout_marginRight="16dp"
                             app:errorEnabled="true"
                             android:gravity="center"
                             android:hint="Pagine studiate"
                             app:helperTextEnabled="true"
-                            app:helperText="* in questa sessione">
+                            app:helperText="* in questa sessione"
+                            android:nextFocusDown="@id/til_end_session_notes">
 
                             <android.support.design.widget.TextInputEditText
                                 android:id="@+id/end_session_pages_edit_text"
@@ -172,10 +174,10 @@
                         android:id="@+id/til_end_session_notes"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginRight="8dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginRight="16dp"
                         android:hint="Note della sessione"
                         android:layout_marginTop="16dp">
                         <android.support.design.widget.TextInputEditText
