--- a/app/src/main/res/layout/activity_info_session.xml
+++ b/app/src/main/res/layout/activity_info_session.xml
@@ -94,6 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
                 android:background="#FFFFFF"
+                android:elevation="4dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginRight="8dp"
@@ -117,7 +118,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="#000000"
-                            android:textSize="20sp"/>
+                            android:textSize="20sp"
+                            android:gravity="center_horizontal"/>
 
                     </LinearLayout>
 
@@ -187,6 +189,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF"
+                android:elevation="4dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginRight="8dp"
