--- a/app/src/main/res/layout/info_exam_fragment.xml
+++ b/app/src/main/res/layout/info_exam_fragment.xml
@@ -5,7 +5,6 @@
     android:layout_centerHorizontal="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:maxWidth="600dp"
     android:layout_marginTop="8dp"
     tools:context=".ExamActivity"
     android:fillViewport="true">
@@ -81,6 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:background="#FFFFFF"
+            android:elevation="4dp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginRight="8dp"
@@ -178,6 +178,7 @@
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
             android:layout_marginLeft="8dp"
+            android:elevation="4dp"
             android:layout_marginStart="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
