--- a/app/src/main/res/layout/session_list_exam_fragment.xml
+++ b/app/src/main/res/layout/session_list_exam_fragment.xml
@@ -8,8 +8,7 @@
     <ListView
         android:id="@+id/sessions_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/main_activity_actionbar"/>
+        android:layout_height="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/new_session_fab"
@@ -18,6 +17,10 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:elevation="4dp"
         android:src="@drawable/ic_fab_exam"
         app:fabSize="normal"/>
 
