--- a/app/src/main/res/layout/single_session.xml
+++ b/app/src/main/res/layout/single_session.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="85dp"
     android:layout_width="match_parent"
-    android:layout_marginStart="8dp"
-    android:layout_marginLeft="8dp"
+    android:paddingLeft="8dp"
+    android:paddingStart="8dp"
     android:orientation="horizontal">
     <LinearLayout
         android:layout_width="0dp"
