--- a/app/src/main/res/layout/activity_info_session.xml
+++ b/app/src/main/res/layout/activity_info_session.xml
@@ -92,7 +92,7 @@
             <FrameLayout
                 android:id="@+id/generics_pages"
                 android:layout_width="match_parent"
-                android:layout_height="170dp"
+                android:layout_height="210sp"
                 android:background="#FFFFFF"
                 android:elevation="4dp"
                 android:layout_marginLeft="8dp"
@@ -118,8 +118,25 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="#000000"
-                            android:textSize="20sp"
-                            android:gravity="center_horizontal"/>
+                            android:textSize="20sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.6"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
+
+                        <TextView
+                            android:id="@+id/session_time_info"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="#000000"
+                            android:textSize="16sp"
+                            android:gravity="center_horizontal"
+                            android:alpha="0.8"/>
 
                     </LinearLayout>
 
@@ -144,7 +161,7 @@
                             android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:textColor="#000000"
-                            android:textAlignment="center"
+                            android:gravity="end"
                             android:textSize="20sp"/>
 
                     </LinearLayout>
@@ -156,7 +173,7 @@
                         android:orientation="horizontal">
                         <TextView
                             android:layout_width="0dp"
-                            android:layout_weight="2"
+                            android:layout_weight="2.3"
                             android:layout_height="wrap_content"
                             android:text="Percentuale sul corso"
                             android:textColor="#000000"
@@ -167,8 +184,7 @@
                             android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:textSize="26sp"
-                            android:text="50%"
-                            android:textAlignment="center"
+                            android:gravity="end"
                             android:textColor="#000000"/>
                     </LinearLayout>
                 </LinearLayout>
